Fix background color and spacing

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 h1 {
     font-family: "Roboto";
-    color: #A379C9;
+    color: #703EC3;
     font-size: 36px;
 }
 
